--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "project",
     "require-dev": {
         "phpunit/phpunit": "^11.0",
-        "phpstan/phpstan": "^1.10"
+        "phpstan/phpstan": "^1.10",
+        "squizlabs/php_codesniffer": "^3.9"
     },
     "autoload": {
         "psr-4": {
@@ -16,6 +17,5 @@
             "name": "David Merriman",
             "email": "merriman.david.j@gmail.com"
         }
-    ],
-    "require": {}
+    ]
 }
